--- a/src/app/footer.html
+++ b/src/app/footer.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style/reset.css" />
     <link rel="stylesheet" href="../style/output.css" />
   </head>
   <body>
@@ -76,7 +75,7 @@
           <div class="block h-16 w-[100px] lg:h-[117px] lg:w-[180px]">
             <img
               class="size-full"
-              src="../imege/Group 6356235.png"
+              src="../public/imege/Group 6356235.png"
               alt="logo"
             />
           </div>
@@ -95,17 +94,17 @@
           <p>help</p>
         </div>
       </div>
-      <div class="bg-LineCOlor/20 z-10 mt-5 h-px"></div>
+      <div class="z-10 mt-5 h-px bg-LineCOlor/20"></div>
       <div
         class="absolute bottom-0 left-0 right-0 -z-10 mx-auto block h-[206px] w-[280px] lg:top-0 lg:h-full lg:w-[375px]"
       >
-        <img class="size-full" src="../imege/World Map.png" alt="logo" />
+        <img class="size-full" src="../public/imege/World Map.png" alt="logo" />
       </div>
       <div
-        class="z-10 mt-5 flex flex-col-reverse lg:items-center items-start-start text-xs lg:flex-row justify-between"
+        class="items-start-start z-10 mt-5 flex flex-col-reverse justify-between text-xs lg:flex-row lg:items-center"
       >
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        <div class="flex items-center gap-x-4 mb-3 lg:mb-0">
+        <div class="mb-3 flex items-center gap-x-4 lg:mb-0">
           <div class="">
             <svg class="size-6">
               <use href="#facebook"></use>
