--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style/reset.css" />
     <link rel="stylesheet" href="../style/output.css" />
   </head>
   <body>
@@ -87,25 +86,25 @@
 
     <!-- mobile -->
     <section class="lg:hidden">
-      <div class="bg-Navblue h-14">
+      <div class="h-14 bg-Navblue">
         <div class="mx-auto flex h-full items-center justify-between px-4">
-          <div class="w-15 block h-10">
+          <div class="block h-10 w-15">
             <img
               class="size-full"
-              src="../imege/Group 6356235.png"
+              src="../public/imege/Group 6356235.png"
               alt="logo"
             />
           </div>
 
-          <div class="gap-x-5.5 flex items-center">
+          <div class="flex items-center gap-x-5.5">
             <div class="">
-              <svg class="text-WhiteColor size-4">
+              <svg class="size-4 text-WhiteColor">
                 <use href="#search"></use>
               </svg>
             </div>
 
             <div class="">
-              <svg class="text-WhiteColor size-5">
+              <svg class="size-5 text-WhiteColor">
                 <use href="#menu"></use>
               </svg>
             </div>
@@ -123,7 +122,7 @@
           <div class="h-30 w-41">
             <img
               class="size-full"
-              src="../imege/Original Logo 1.png"
+              src="../public/imege/Original Logo 1.png"
               alt="logo"
             />
           </div>
@@ -135,12 +134,12 @@
               placeholder="SEARCH YOUR TEXT"
               id=""
             />
-            <svg class="text-SearchColor mr-6 size-6 shrink-0">
+            <svg class="mr-6 size-6 shrink-0 text-SearchColor">
               <use href="#search"></use>
             </svg>
           </div>
         </div>
-        <div class="bg-Navblue text-WhiteColor h-12">
+        <div class="h-12 bg-Navblue text-WhiteColor">
           <div class="lg:px mx-auto flex h-full max-w-1440 items-center gap-6">
             <div class="group relative flex items-center gap-1">
               <p class="cursor-pointer">trade stats</p>
@@ -151,7 +150,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="bg-MenuColor text-BlackColor w-[138px] px-3 text-sm"
+                  class="w-[138px] bg-MenuColor px-3 text-sm text-BlackColor"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -166,7 +165,7 @@
                       >
                         <div class="ml-4">
                           <div
-                            class="bg-MenuColor text-BlackColor w-[137px] px-3 text-sm"
+                            class="w-[137px] bg-MenuColor px-3 text-sm text-BlackColor"
                           >
                             <ul
                               class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -215,7 +214,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="bg-MenuColor text-BlackColor w-[226px] px-3 text-sm"
+                  class="w-[226px] bg-MenuColor px-3 text-sm text-BlackColor"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -243,7 +242,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="bg-MenuColor text-BlackColor w-[226px] px-3 text-sm"
+                  class="w-[226px] bg-MenuColor px-3 text-sm text-BlackColor"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
