--- a/src/app/menu-mobile.html
+++ b/src/app/menu-mobile.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style/reset.css" />
     <link rel="stylesheet" href="../style/output.css" />
   </head>
   <body>
@@ -26,28 +25,27 @@
         />
       </symbol>
       <symbol
-      id="arrow-down"
-      viewBox="0 0 16 16"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
+        id="arrow-down"
+        viewBox="0 0 16 16"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
       >
-      <path
-        d="M8.00001 11.2C7.53335 11.2 7.06668 11.02 6.71335 10.6667L2.36668 6.31999C2.17335 6.12666 2.17335 5.80666 2.36668 5.61332C2.56001 5.41999 2.88001 5.41999 3.07335 5.61332L7.42001 9.95999C7.74001 10.28 8.26001 10.28 8.58001 9.95999L12.9267 5.61332C13.12 5.41999 13.44 5.41999 13.6333 5.61332C13.8267 5.80666 13.8267 6.12666 13.6333 6.31999L9.28668 10.6667C8.93335 11.02 8.46668 11.2 8.00001 11.2Z"
-        fill="#FCFDFF"
+        <path
+          d="M8.00001 11.2C7.53335 11.2 7.06668 11.02 6.71335 10.6667L2.36668 6.31999C2.17335 6.12666 2.17335 5.80666 2.36668 5.61332C2.56001 5.41999 2.88001 5.41999 3.07335 5.61332L7.42001 9.95999C7.74001 10.28 8.26001 10.28 8.58001 9.95999L12.9267 5.61332C13.12 5.41999 13.44 5.41999 13.6333 5.61332C13.8267 5.80666 13.8267 6.12666 13.6333 6.31999L9.28668 10.6667C8.93335 11.02 8.46668 11.2 8.00001 11.2Z"
+          fill="#FCFDFF"
         />
-    </symbol>
-    <symbol
-    id="arrow-right"
-    viewBox="0 0 16 16"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-    >
-    <path
-    d="M5.93998 13.78C5.81332 13.78 5.68665 13.7333 5.58665 13.6333C5.39332 13.44 5.39332 13.12 5.58665 12.9267L9.93332 8.58C10.2533 8.26 10.2533 7.74 9.93332 7.42L5.58665 3.07333C5.39332 2.88 5.39332 2.56 5.58665 2.36666C5.77998 2.17333 6.09998 2.17333 6.29332 2.36666L10.64 6.71333C10.98 7.05333 11.1733 7.51333 11.1733 8C11.1733 8.48666 10.9866 8.94667 10.64 9.28666L6.29332 13.6333C6.19332 13.7267 6.06665 13.78 5.93998 13.78Z"
-    fill="#000414"
-    />
-</symbol>
-   
+      </symbol>
+      <symbol
+        id="arrow-right"
+        viewBox="0 0 16 16"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M5.93998 13.78C5.81332 13.78 5.68665 13.7333 5.58665 13.6333C5.39332 13.44 5.39332 13.12 5.58665 12.9267L9.93332 8.58C10.2533 8.26 10.2533 7.74 9.93332 7.42L5.58665 3.07333C5.39332 2.88 5.39332 2.56 5.58665 2.36666C5.77998 2.17333 6.09998 2.17333 6.29332 2.36666L10.64 6.71333C10.98 7.05333 11.1733 7.51333 11.1733 8C11.1733 8.48666 10.9866 8.94667 10.64 9.28666L6.29332 13.6333C6.19332 13.7267 6.06665 13.78 5.93998 13.78Z"
+          fill="#000414"
+        />
+      </symbol>
     </svg>
 
     <div
@@ -56,22 +54,22 @@
 
         box-shadow: 0px 1px 2px 0px #00000014;
       "
-      class="bg-WhiteColor mx-auto px-4 lg:hidden"
+      class="mx-auto bg-WhiteColor px-4 lg:hidden"
     >
       <div class="flex h-14 items-center justify-between">
-        <div class="w-15 block h-10">
-          <img class="size-full" src="../imege/Logo.png" alt="logo" />
+        <div class="block h-10 w-15">
+          <img class="size-full" src="../public/imege/Logo.png" alt="logo" />
         </div>
         <div class="">
-          <svg class="text-WhiteColor size-10">
+          <svg class="size-10 text-WhiteColor">
             <use href="#add"></use>
           </svg>
         </div>
       </div>
     </div>
-    <div class="text-BlackColor2 text-sm px-6 mt-5 space-y-5">
+    <div class="mt-5 space-y-5 px-6 text-sm text-BlackColor2">
       <div class="flex items-center gap-x-1">
-          <p>trade stats</p>
+        <p>trade stats</p>
         <div class="">
           <svg class="size-4">
             <use href="#arrow-right"></use>
@@ -79,7 +77,7 @@
         </div>
       </div>
       <div class="flex items-center gap-x-1">
-          <p>global industries</p>
+        <p>global industries</p>
         <div class="">
           <svg class="size-4">
             <use href="#arrow-right"></use>
@@ -87,7 +85,7 @@
         </div>
       </div>
       <div class="flex items-center gap-x-1">
-          <p>trade assistance</p>
+        <p>trade assistance</p>
         <div class="">
           <svg class="size-4">
             <use href="#arrow-right"></use>
