--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style/output.css" />
   </head>
-  <body>
+  <body class="font-roboto">
     <svg hidden>
       <symbol
         id="search"
@@ -114,10 +114,10 @@
     </section>
 
     <!--  desktop -->
-    <section class="hidden font-roboto lg:block">
+    <section class="hidden lg:block">
       <div>
         <div
-          class="lg:px mx-auto flex max-w-1440 items-center justify-between px-4"
+          class="lg:px-[78px] mx-auto flex max-w-1440 items-center justify-between px-4"
         >
           <div class="h-30 w-41">
             <img
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="h-12 bg-Navblue text-WhiteColor">
-          <div class="lg:px mx-auto flex h-full max-w-1440 items-center gap-6">
+          <div class="lg:px-[78px] mx-auto flex h-full max-w-1440 items-center gap-6">
             <div class="group relative flex items-center gap-1">
               <p class="cursor-pointer">trade stats</p>
               <svg class="size-4 cursor-pointer">
