--- a/src/app/menu-mobile.html
+++ b/src/app/menu-mobile.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style/output.css" />
   </head>
-  <body>
+  <body class="font-roboto">
     <svg hidden>
       <symbol
         id="add"
