--- a/src/style/output.css
+++ b/src/style/output.css
@@ -670,9 +670,28 @@ video {
   z-index: 10;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.mx-1\.5 {
+  margin-left: 0.375rem;
+  margin-right: 0.375rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-3 {
@@ -691,8 +710,43 @@ video {
   margin-right: 1.5rem;
 }
 
+.mr-\[5px\] {
+  margin-right: 5px;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-\[38px\] {
+  margin-top: 38px;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .block {
@@ -701,6 +755,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -756,12 +814,20 @@ video {
   height: 2rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
 .h-\[132px\] {
   height: 132px;
 }
 
 .h-\[206px\] {
   height: 206px;
+}
+
+.h-\[271px\] {
+  height: 271px;
 }
 
 .h-full {
@@ -778,6 +844,10 @@ video {
 
 .w-41 {
   width: 164px;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[100px\] {
@@ -816,6 +886,10 @@ video {
   flex-shrink: 0;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -832,6 +906,14 @@ video {
   list-style-type: disc;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -846,6 +928,18 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -870,6 +964,16 @@ video {
        column-gap: 2.5rem;
 }
 
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -880,8 +984,21 @@ video {
        column-gap: 22px;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .gap-y-3 {
   row-gap: 0.75rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -896,6 +1013,30 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.justify-self-end {
+  justify-self: end;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-\[3px\] {
+  border-radius: 3px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -904,9 +1045,24 @@ video {
   border-style: solid;
 }
 
+.border-BorderColorB {
+  --tw-border-opacity: 1;
+  border-color: rgb(181 185 200 / var(--tw-border-opacity));
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.bg-BgColorP {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 238 254 / var(--tw-bg-opacity));
+}
+
+.bg-BorderColorT {
+  --tw-bg-opacity: 1;
+  background-color: rgb(112 115 128 / var(--tw-bg-opacity));
 }
 
 .bg-LineCOlor\/20 {
@@ -928,6 +1084,21 @@ video {
   background-color: rgb(252 253 255 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -941,6 +1112,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -969,6 +1145,14 @@ video {
   font-family: roboto;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -984,6 +1168,18 @@ video {
   line-height: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
 .text-BlackColor {
   --tw-text-opacity: 1;
   color: rgb(0 4 20 / var(--tw-text-opacity));
@@ -992,6 +1188,16 @@ video {
 .text-BlackColor2 {
   --tw-text-opacity: 1;
   color: rgb(0 10 51 / var(--tw-text-opacity));
+}
+
+.text-BorderColorT {
+  --tw-text-opacity: 1;
+  color: rgb(112 115 128 / var(--tw-text-opacity));
+}
+
+.text-Navblue {
+  --tw-text-opacity: 1;
+  color: rgb(0 23 112 / var(--tw-text-opacity));
 }
 
 .text-SearchColor {
@@ -1016,17 +1222,95 @@ video {
   opacity: 1;
 }
 
+.child\:flex > * {
+  display: flex;
+}
+
+.child\:justify-between > * {
+  justify-content: space-between;
+}
+
+.child\:rounded-lg > * {
+  border-radius: 0.5rem;
+}
+
+.child\:border-b-4 > * {
+  border-bottom-width: 4px;
+}
+
+.child\:border-solid > * {
+  border-style: solid;
+}
+
+.child\:border-BlackColor2 > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 10 51 / var(--tw-border-opacity));
+}
+
+.child\:bg-BgWColor > * {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 247 248 / var(--tw-bg-opacity));
+}
+
+.child\:p-3 > * {
+  padding: 0.75rem;
+}
+
+.child\:px-2 > * {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.child\:py-2\.5 > * {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 @media (min-width: 1024px) {
   .lg\:top-0 {
     top: 0px;
+  }
+
+  .lg\:mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .lg\:my-\[11px\] {
+    margin-top: 11px;
+    margin-bottom: 11px;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
 
+  .lg\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .lg\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mt-0\.5 {
+    margin-top: 0.125rem;
+  }
+
+  .lg\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .lg\:mt-14 {
+    margin-top: 3.5rem;
   }
 
   .lg\:block {
@@ -1041,6 +1325,10 @@ video {
     display: none;
   }
 
+  .lg\:h-14 {
+    height: 3.5rem;
+  }
+
   .lg\:h-\[117px\] {
     height: 117px;
   }
@@ -1051,6 +1339,10 @@ video {
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-12 {
+    width: 3rem;
   }
 
   .lg\:w-\[180px\] {
@@ -1065,12 +1357,21 @@ video {
     width: 378px;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 
   .lg\:gap-x-7 {
@@ -1083,16 +1384,63 @@ video {
          column-gap: 2rem;
   }
 
+  .lg\:rounded {
+    border-radius: 0.25rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .lg\:px-\[78px\] {
     padding-left: 78px;
     padding-right: 78px;
+  }
+
+  .lg\:pb-4 {
+    padding-bottom: 1rem;
   }
 
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
 
+  .lg\:pb-\[25px\] {
+    padding-bottom: 25px;
+  }
+
   .lg\:pt-12 {
     padding-top: 3rem;
+  }
+
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .lg\:text-\[10px\] {
+    font-size: 10px;
+  }
+
+  .lg\:text-\[19px\] {
+    font-size: 19px;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .lg\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .lg\:font-medium {
+    font-weight: 500;
+  }
+
+  .child\:lg\:pt-5 > * {
+    padding-top: 1.25rem;
   }
 }
