--- a/src/app/footer.html
+++ b/src/app/footer.html
@@ -68,7 +68,7 @@
           #1f2233 67.82%
         );
       "
-      class="relative -z-30 px-4 pb-10 pt-8 text-sm text-WhiteColor lg:px-[78px] lg:pb-8 lg:pt-12"
+      class="text-customWhite relative -z-30 px-4 pb-10 pt-8 text-sm lg:px-[78px] lg:pb-8 lg:pt-12"
     >
       <div class="z-10 items-center justify-between lg:flex">
         <div class="flex items-center gap-x-4 lg:gap-x-8">
@@ -79,7 +79,7 @@
               alt="logo"
             />
           </div>
-          <div class="h-8 w-px bg-WhiteColor"></div>
+          <div class="bg-customWhite h-8 w-px"></div>
           <p class="">Lorem, ipsum dolor.</p>
         </div>
         <div
@@ -94,7 +94,7 @@
           <p>help</p>
         </div>
       </div>
-      <div class="z-10 mt-5 h-px bg-LineCOlor/20"></div>
+      <div class="bg-lineColor/20 z-10 mt-5 h-px"></div>
       <div
         class="absolute bottom-0 left-0 right-0 -z-10 mx-auto block h-[206px] w-[280px] lg:top-0 lg:h-full lg:w-[375px]"
       >
