--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style/output.css" />
   </head>
-  <body>
+  <body class="font-roboto">
     <svg hidden>
       <symbol
         id="search"
@@ -86,7 +86,7 @@
 
     <!-- mobile -->
     <section class="lg:hidden">
-      <div class="h-14 bg-Navblue">
+      <div class="bg-customblue h-14">
         <div class="mx-auto flex h-full items-center justify-between px-4">
           <div class="block h-10 w-15">
             <img
@@ -98,13 +98,13 @@
 
           <div class="flex items-center gap-x-5.5">
             <div class="">
-              <svg class="size-4 text-WhiteColor">
+              <svg class="text-customWhite size-4">
                 <use href="#search"></use>
               </svg>
             </div>
 
             <div class="">
-              <svg class="size-5 text-WhiteColor">
+              <svg class="text-customWhite size-5">
                 <use href="#menu"></use>
               </svg>
             </div>
@@ -114,10 +114,10 @@
     </section>
 
     <!--  desktop -->
-    <section class="hidden font-roboto lg:block">
+    <section class="hidden lg:block">
       <div>
         <div
-          class="lg:px mx-auto flex max-w-1440 items-center justify-between px-4"
+          class="mx-auto flex max-w-1440 items-center justify-between px-4 lg:px-[78px]"
         >
           <div class="h-30 w-41">
             <img
@@ -134,13 +134,15 @@
               placeholder="SEARCH YOUR TEXT"
               id=""
             />
-            <svg class="mr-6 size-6 shrink-0 text-SearchColor">
+            <svg class="text-searchColor mr-6 size-6 shrink-0">
               <use href="#search"></use>
             </svg>
           </div>
         </div>
-        <div class="h-12 bg-Navblue text-WhiteColor">
-          <div class="lg:px mx-auto flex h-full max-w-1440 items-center gap-6">
+        <div class="bg-customblue text-customWhite h-12">
+          <div
+            class="mx-auto flex h-full max-w-1440 items-center gap-6 lg:px-[78px]"
+          >
             <div class="group relative flex items-center gap-1">
               <p class="cursor-pointer">trade stats</p>
               <svg class="size-4 cursor-pointer">
@@ -150,7 +152,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="w-[138px] bg-MenuColor px-3 text-sm text-BlackColor"
+                  class="bg-menuColor text-blackColor w-[138px] px-3 text-sm"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -165,7 +167,7 @@
                       >
                         <div class="ml-4">
                           <div
-                            class="w-[137px] bg-MenuColor px-3 text-sm text-BlackColor"
+                            class="bg-menuColor text-blackColor w-[137px] px-3 text-sm"
                           >
                             <ul
                               class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -214,7 +216,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="w-[226px] bg-MenuColor px-3 text-sm text-BlackColor"
+                  class="bg-menuColor text-blackColor w-[226px] px-3 text-sm"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
@@ -242,7 +244,7 @@
                 class="invisible absolute top-0 pt-10 opacity-0 group-hover:visible group-hover:opacity-100"
               >
                 <div
-                  class="w-[226px] bg-MenuColor px-3 text-sm text-BlackColor"
+                  class="bg-menuColor text-blackColor w-[226px] px-3 text-sm"
                 >
                   <ul
                     class="relative ml-1 list-inside list-disc space-y-3 py-2"
