--- a/src/app/menu-mobile.html
+++ b/src/app/menu-mobile.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style/output.css" />
   </head>
-  <body>
+  <body class="font-roboto">
     <svg hidden>
       <symbol
         id="add"
@@ -54,20 +54,20 @@
 
         box-shadow: 0px 1px 2px 0px #00000014;
       "
-      class="mx-auto bg-WhiteColor px-4 lg:hidden"
+      class="bg-customWhite mx-auto px-4 lg:hidden"
     >
       <div class="flex h-14 items-center justify-between">
         <div class="block h-10 w-15">
           <img class="size-full" src="../public/imege/Logo.png" alt="logo" />
         </div>
         <div class="">
-          <svg class="size-10 text-WhiteColor">
+          <svg class="text-customWhite size-10">
             <use href="#add"></use>
           </svg>
         </div>
       </div>
     </div>
-    <div class="mt-5 space-y-5 px-6 text-sm text-BlackColor2">
+    <div class="text-blackColor2 mt-5 space-y-5 px-6 text-sm">
       <div class="flex items-center gap-x-1">
         <p>trade stats</p>
         <div class="">
