--- a/src/style/output.css
+++ b/src/style/output.css
@@ -670,9 +670,24 @@ video {
   z-index: 10;
 }
 
+.mx-1\.5 {
+  margin-left: 0.375rem;
+  margin-right: 0.375rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-3 {
@@ -691,8 +706,35 @@ video {
   margin-right: 1.5rem;
 }
 
+.mr-\[5px\] {
+  margin-right: 5px;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-\[38px\] {
+  margin-top: 38px;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .block {
@@ -701,6 +743,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -756,12 +802,24 @@ video {
   height: 2rem;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
 .h-\[132px\] {
   height: 132px;
 }
 
 .h-\[206px\] {
   height: 206px;
+}
+
+.h-\[271px\] {
+  height: 271px;
+}
+
+.h-\[280px\] {
+  height: 280px;
 }
 
 .h-full {
@@ -778,6 +836,10 @@ video {
 
 .w-41 {
   width: 164px;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[100px\] {
@@ -816,6 +878,10 @@ video {
   flex-shrink: 0;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -832,6 +898,14 @@ video {
   list-style-type: disc;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -846,6 +920,14 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -870,6 +952,16 @@ video {
        column-gap: 2.5rem;
 }
 
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -880,8 +972,21 @@ video {
        column-gap: 22px;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .gap-y-3 {
   row-gap: 0.75rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -894,6 +999,26 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-\[3px\] {
+  border-radius: 3px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-b {
@@ -909,23 +1034,53 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-LineCOlor\/20 {
-  background-color: rgb(191 195 204 / 0.2);
+.border-borderColorB {
+  --tw-border-opacity: 1;
+  border-color: rgb(181 185 200 / var(--tw-border-opacity));
 }
 
-.bg-MenuColor {
+.bg-blue-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(223 225 229 / var(--tw-bg-opacity));
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
-.bg-Navblue {
+.bg-customWhite {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 253 255 / var(--tw-bg-opacity));
+}
+
+.bg-customblue {
   --tw-bg-opacity: 1;
   background-color: rgb(0 23 112 / var(--tw-bg-opacity));
 }
 
-.bg-WhiteColor {
+.bg-menuColor {
   --tw-bg-opacity: 1;
-  background-color: rgb(252 253 255 / var(--tw-bg-opacity));
+  background-color: rgb(223 225 229 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-lineColor\/20 {
+  background-color: rgb(191 195 204 / 0.2);
+}
+
+.bg-borderColorT {
+  --tw-bg-opacity: 1;
+  background-color: rgb(112 115 128 / var(--tw-bg-opacity));
+}
+
+.bg-bgColorP {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 238 254 / var(--tw-bg-opacity));
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -941,6 +1096,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -969,6 +1129,14 @@ video {
   font-family: roboto;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -984,24 +1152,46 @@ video {
   line-height: 1rem;
 }
 
-.text-BlackColor {
-  --tw-text-opacity: 1;
-  color: rgb(0 4 20 / var(--tw-text-opacity));
+.font-bold {
+  font-weight: 700;
 }
 
-.text-BlackColor2 {
+.font-medium {
+  font-weight: 500;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.text-customWhite {
+  --tw-text-opacity: 1;
+  color: rgb(252 253 255 / var(--tw-text-opacity));
+}
+
+.text-customblue {
+  --tw-text-opacity: 1;
+  color: rgb(0 23 112 / var(--tw-text-opacity));
+}
+
+.text-blackColor2 {
   --tw-text-opacity: 1;
   color: rgb(0 10 51 / var(--tw-text-opacity));
 }
 
-.text-SearchColor {
+.text-blackColor {
+  --tw-text-opacity: 1;
+  color: rgb(0 4 20 / var(--tw-text-opacity));
+}
+
+.text-searchColor {
   --tw-text-opacity: 1;
   color: rgb(65 70 92 / var(--tw-text-opacity));
 }
 
-.text-WhiteColor {
+.text-borderColorT {
   --tw-text-opacity: 1;
-  color: rgb(252 253 255 / var(--tw-text-opacity));
+  color: rgb(112 115 128 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1016,17 +1206,95 @@ video {
   opacity: 1;
 }
 
+.child\:flex > * {
+  display: flex;
+}
+
+.child\:justify-between > * {
+  justify-content: space-between;
+}
+
+.child\:rounded-lg > * {
+  border-radius: 0.5rem;
+}
+
+.child\:border-b-4 > * {
+  border-bottom-width: 4px;
+}
+
+.child\:border-solid > * {
+  border-style: solid;
+}
+
+.child\:border-blackColor2 > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 10 51 / var(--tw-border-opacity));
+}
+
+.child\:bg-bgWColor > * {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 247 248 / var(--tw-bg-opacity));
+}
+
+.child\:p-3 > * {
+  padding: 0.75rem;
+}
+
+.child\:px-2 > * {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.child\:py-2\.5 > * {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 @media (min-width: 1024px) {
   .lg\:top-0 {
     top: 0px;
+  }
+
+  .lg\:mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .lg\:my-\[11px\] {
+    margin-top: 11px;
+    margin-bottom: 11px;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
 
+  .lg\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .lg\:mr-2 {
+    margin-right: 0.5rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mt-0\.5 {
+    margin-top: 0.125rem;
+  }
+
+  .lg\:mt-14 {
+    margin-top: 3.5rem;
+  }
+
+  .lg\:mt-3 {
+    margin-top: 0.75rem;
+  }
+
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .lg\:block {
@@ -1041,8 +1309,16 @@ video {
     display: none;
   }
 
+  .lg\:h-14 {
+    height: 3.5rem;
+  }
+
   .lg\:h-\[117px\] {
     height: 117px;
+  }
+
+  .lg\:h-\[316px\] {
+    height: 316px;
   }
 
   .lg\:h-auto {
@@ -1051,6 +1327,10 @@ video {
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-12 {
+    width: 3rem;
   }
 
   .lg\:w-\[180px\] {
@@ -1065,12 +1345,21 @@ video {
     width: 378px;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 
   .lg\:gap-x-7 {
@@ -1083,16 +1372,63 @@ video {
          column-gap: 2rem;
   }
 
+  .lg\:rounded {
+    border-radius: 0.25rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .lg\:px-\[78px\] {
     padding-left: 78px;
     padding-right: 78px;
+  }
+
+  .lg\:pb-4 {
+    padding-bottom: 1rem;
   }
 
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
 
+  .lg\:pb-\[25px\] {
+    padding-bottom: 25px;
+  }
+
   .lg\:pt-12 {
     padding-top: 3rem;
+  }
+
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .lg\:text-\[10px\] {
+    font-size: 10px;
+  }
+
+  .lg\:text-\[19px\] {
+    font-size: 19px;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .lg\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .lg\:font-medium {
+    font-weight: 500;
+  }
+
+  .child\:lg\:pt-5 > * {
+    padding-top: 1.25rem;
   }
 }
