--- a/src/style/output.css
+++ b/src/style/output.css
@@ -658,6 +658,10 @@ video {
   top: 0px;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -702,10 +706,6 @@ video {
   margin-left: 1rem;
 }
 
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
 .mr-\[5px\] {
   margin-right: 5px;
 }
@@ -728,6 +728,10 @@ video {
 
 .mt-\[38px\] {
   margin-top: 38px;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .line-clamp-2 {
@@ -862,6 +866,10 @@ video {
   width: 280px;
 }
 
+.w-\[303px\] {
+  width: 303px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -882,8 +890,18 @@ video {
   flex-grow: 1;
 }
 
-.cursor-pointer {
-  cursor: pointer;
+.-translate-x-2 {
+  --tw-translate-x: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-2 {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-default {
+  cursor: default;
 }
 
 .list-inside {
@@ -938,6 +956,10 @@ video {
   gap: 0.25rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -989,6 +1011,11 @@ video {
   row-gap: 2rem;
 }
 
+.gap-x-0\.5 {
+  -moz-column-gap: 0.125rem;
+       column-gap: 0.125rem;
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1029,19 +1056,14 @@ video {
   border-style: solid;
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .border-borderColorB {
   --tw-border-opacity: 1;
   border-color: rgb(181 185 200 / var(--tw-border-opacity));
 }
 
-.bg-bgColorP {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 238 254 / var(--tw-bg-opacity));
+.border-searchColor {
+  --tw-border-opacity: 1;
+  border-color: rgb(65 70 92 / var(--tw-border-opacity));
 }
 
 .bg-blue-300 {
@@ -1057,11 +1079,6 @@ video {
 .bg-customWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(252 253 255 / var(--tw-bg-opacity));
-}
-
-.bg-customblue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 23 112 / var(--tw-bg-opacity));
 }
 
 .bg-lineColor\/20 {
@@ -1108,9 +1125,19 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[217\] {
+  padding-left: 217;
+  padding-right: 217;
+}
+
+.px-\[217px\] {
+  padding-left: 217px;
+  padding-right: 217px;
 }
 
 .pb-10 {
@@ -1150,6 +1177,15 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1194,12 +1230,83 @@ video {
   color: rgb(65 70 92 / var(--tw-text-opacity));
 }
 
+.text-textblue {
+  --tw-text-opacity: 1;
+  color: rgb(9 41 167 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
 .opacity-0 {
   opacity: 0;
 }
 
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.placeholder\:text-lineColor::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(191 195 204 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-lineColor::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(191 195 204 / var(--tw-text-opacity));
+}
+
+.group\/child:hover .group-hover\/child\:visible {
+  visibility: visible;
+}
+
+.group\/parent:hover .group-hover\/parent\:visible {
+  visibility: visible;
+}
+
 .group:hover .group-hover\:visible {
   visibility: visible;
+}
+
+.group\/child:hover .group-hover\/child\:translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/parent:hover .group-hover\/parent\:translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/parent:hover .group-hover\/parent\:-rotate-180 {
+  --tw-rotate: -180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:-rotate-180 {
+  --tw-rotate: -180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/child:hover .group-hover\/child\:opacity-100 {
+  opacity: 1;
+}
+
+.group\/parent:hover .group-hover\/parent\:opacity-100 {
+  opacity: 1;
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -1250,6 +1357,12 @@ video {
   padding-bottom: 0.625rem;
 }
 
+@media not all and (min-width: 1024px) {
+  .max-lg\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:top-0 {
     top: 0px;
@@ -1263,6 +1376,11 @@ video {
   .lg\:my-\[11px\] {
     margin-top: 11px;
     margin-bottom: 11px;
+  }
+
+  .lg\:mx-\[217px\] {
+    margin-left: 217px;
+    margin-right: 217px;
   }
 
   .lg\:mb-0 {
@@ -1297,8 +1415,12 @@ video {
     margin-top: 1.5rem;
   }
 
-  .lg\:block {
-    display: block;
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .lg\:mr-\[218px\] {
+    margin-right: 218px;
   }
 
   .lg\:flex {
@@ -1372,6 +1494,11 @@ video {
          column-gap: 2rem;
   }
 
+  .lg\:gap-x-1 {
+    -moz-column-gap: 0.25rem;
+         column-gap: 0.25rem;
+  }
+
   .lg\:rounded {
     border-radius: 0.25rem;
   }
@@ -1384,6 +1511,11 @@ video {
   .lg\:px-\[78px\] {
     padding-left: 78px;
     padding-right: 78px;
+  }
+
+  .lg\:px-\[217px\] {
+    padding-left: 217px;
+    padding-right: 217px;
   }
 
   .lg\:pb-4 {
@@ -1424,8 +1556,45 @@ video {
     line-height: 1rem;
   }
 
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-\[40px\] {
+    font-size: 40px;
+  }
+
   .lg\:font-medium {
     font-weight: 500;
+  }
+
+  .lg\:leading-6 {
+    line-height: 1.5rem;
+  }
+
+  .lg\:leading-10 {
+    line-height: 2.5rem;
+  }
+
+  .lg\:leading-\[\] {
+    line-height: ;
+  }
+
+  .lg\:leading-\[64\] {
+    line-height: 64;
+  }
+
+  .lg\:leading-\[64px\] {
+    line-height: 64px;
+  }
+
+  .lg\:text-\[\] {
+    color: ;
+  }
+
+  .lg\:text-\[40\] {
+    color: 40;
   }
 
   .child\:lg\:pt-5 > * {
