End of the second part

--- a/src/app/footer.html
+++ b/src/app/footer.html
@@ -13,6 +13,7 @@
         viewBox="0 0 24 24"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
+        stroke="currentColor"
       >
         <path
           d="M14.75 22.7501H10.25V15.5001H9.29999C8.71999 15.5001 8.25 15.0301 8.25 14.4501V12.5501C8.25 11.9701 8.71999 11.5001 9.29999 11.5001H10.25V9.00012C10.25 6.93012 11.93 5.25012 14 5.25012H16.7C17.28 5.25012 17.75 5.72011 17.75 6.30011V8.70013C17.75 9.28013 17.28 9.75012 16.7 9.75012H14.75V11.5001H16.63C16.95 11.5001 17.24 11.6401 17.44 11.8801C17.64 12.1201 17.72 12.4401 17.66 12.7501L17.28 14.6501C17.18 15.1401 16.75 15.4901 16.25 15.4901H14.75V22.7501ZM11.75 21.2501H13.25V14.0001H15.89L16.09 13.0001H13.26V9.30011C13.26 8.72011 13.73 8.25012 14.31 8.25012H16.26V6.75012H14C12.76 6.75012 11.75 7.76012 11.75 9.00012V13.0001H9.75V14.0001H11.75V21.2501Z"
@@ -47,14 +48,13 @@
         viewBox="0 0 24 24"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
+        stroke="currentColor"
       >
         <path
           d="M14.22 21.6301C13.04 21.6301 11.37 20.8001 10.05 16.8301L9.33 14.6701L7.17 13.9501C3.21 12.6301 2.38 10.9601 2.38 9.78007C2.38 8.61007 3.21 6.93007 7.17 5.60007L15.66 2.77007C17.78 2.06007 19.55 2.27007 20.64 3.35007C21.73 4.43007 21.94 6.21007 21.23 8.33007L18.4 16.8201C17.07 20.8001 15.4 21.6301 14.22 21.6301ZM7.64 7.03007C4.86 7.96007 3.87 9.06007 3.87 9.78007C3.87 10.5001 4.86 11.6001 7.64 12.5201L10.16 13.3601C10.38 13.4301 10.56 13.6101 10.63 13.8301L11.47 16.3501C12.39 19.1301 13.5 20.1201 14.22 20.1201C14.94 20.1201 16.04 19.1301 16.97 16.3501L19.8 7.86007C20.31 6.32007 20.22 5.06007 19.57 4.41007C18.92 3.76007 17.66 3.68007 16.13 4.19007L7.64 7.03007Z"
-          fill="#FCFDFF"
         />
         <path
           d="M10.11 14.4001C9.91999 14.4001 9.72999 14.3301 9.57999 14.1801C9.28999 13.8901 9.28999 13.4101 9.57999 13.1201L13.16 9.53012C13.45 9.24012 13.93 9.24012 14.22 9.53012C14.51 9.82012 14.51 10.3001 14.22 10.5901L10.64 14.1801C10.5 14.3301 10.3 14.4001 10.11 14.4001Z"
-          fill="#FCFDFF"
         />
       </symbol>
     </svg>
@@ -106,12 +106,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
         <div class="mb-3 flex items-center gap-x-4 lg:mb-0">
           <div class="">
-            <svg class="size-6">
+            <svg class="size-6 text-customWhite">
               <use href="#facebook"></use>
             </svg>
           </div>
           <div class="">
-            <svg class="size-6">
+            <svg class="size-6 text-customWhite">
               <use href="#send-2"></use>
             </svg>
           </div>
