--- a/src/app/session-2.html
+++ b/src/app/session-2.html
@@ -7,6 +7,71 @@
     <link rel="stylesheet" href="../style/output.css" />
   </head>
   <body class="font-roboto">
+    <svg class="hidden">
+      <symbol
+        id="whatsapp"
+        viewBox="0 0 20 20"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1.66678 18.9582C1.50012 18.9582 1.34176 18.8915 1.22509 18.7749C1.06676 18.6165 1.00013 18.3832 1.05846 18.1665L2.10847 14.2415C1.40847 12.9415 1.04178 11.4749 1.04178 9.99154C1.04178 5.04987 5.05845 1.0332 10.0001 1.0332C14.9418 1.0332 18.9584 5.04987 18.9584 9.99154C18.9584 14.9332 14.9418 18.9499 10.0001 18.9499C8.49178 18.9499 7.0168 18.5749 5.70014 17.8582L1.83346 18.9332C1.77513 18.9499 1.72512 18.9582 1.66678 18.9582ZM5.78345 16.5665C5.89178 16.5665 6.00012 16.5999 6.10012 16.6499C7.27512 17.3416 8.62511 17.7082 10.0001 17.7082C14.2501 17.7082 17.7084 14.2499 17.7084 9.99988C17.7084 5.74988 14.2501 2.29154 10.0001 2.29154C5.75011 2.29154 2.29178 5.74988 2.29178 9.99988C2.29178 11.3582 2.65011 12.6832 3.32511 13.8499C3.40844 13.9915 3.43345 14.1665 3.39179 14.3249L2.55845 17.4415L5.62511 16.5915C5.67511 16.5749 5.73345 16.5665 5.78345 16.5665Z"
+          fill="#33D752"
+        />
+        <path
+          d="M12.2833 14.7999C11.7666 14.7999 11.2333 14.6832 10.675 14.4416C10.15 14.2166 9.62496 13.9166 9.11663 13.5416C8.61663 13.1749 8.12498 12.7582 7.67498 12.3082C7.22498 11.8499 6.80828 11.3666 6.44161 10.8666C6.06661 10.3416 5.7666 9.82491 5.54994 9.31657C5.3166 8.76657 5.19995 8.22491 5.19995 7.70825C5.19995 7.34158 5.2666 6.99158 5.3916 6.66658C5.52493 6.32491 5.74161 6.01657 6.02494 5.74991C6.55828 5.22491 7.32498 5.03326 7.93331 5.32493C8.14164 5.41659 8.31664 5.56659 8.44997 5.76659L9.41662 7.1249C9.51662 7.25824 9.59164 7.3999 9.64997 7.54157C9.71664 7.70824 9.75831 7.87493 9.75831 8.03326C9.75831 8.24993 9.69996 8.46659 9.58329 8.65826C9.50829 8.78326 9.39995 8.93326 9.25828 9.07492L9.14994 9.19158C9.19994 9.25824 9.25827 9.34157 9.34993 9.44157C9.52493 9.64157 9.7166 9.85823 9.92494 10.0666C10.1333 10.2666 10.3416 10.4666 10.5499 10.6416C10.6499 10.7249 10.7333 10.7916 10.8 10.8332L10.9166 10.7166C11.0666 10.5666 11.2166 10.4499 11.3666 10.3749C11.6416 10.1999 12.0666 10.1583 12.4416 10.3166C12.575 10.3666 12.7083 10.4416 12.8499 10.5416L14.2416 11.5249C14.4333 11.6582 14.5833 11.8416 14.6833 12.0499C14.7666 12.2582 14.8 12.4416 14.8 12.6332C14.8 12.8832 14.7416 13.1249 14.6333 13.3582C14.525 13.5749 14.3999 13.7666 14.2499 13.9416C13.9833 14.2333 13.675 14.4499 13.3416 14.5916C13.0083 14.7333 12.65 14.7999 12.2833 14.7999ZM7.32494 6.4499C7.27494 6.4499 7.10832 6.4499 6.89998 6.65824C6.74165 6.80824 6.63329 6.96659 6.55829 7.14159C6.48329 7.31659 6.44995 7.51659 6.44995 7.71659C6.44995 8.06659 6.53327 8.44157 6.69994 8.84157C6.87494 9.25823 7.13329 9.69992 7.44996 10.1416C7.77496 10.5833 8.14163 11.0249 8.54997 11.4332C8.9583 11.8332 9.39162 12.2082 9.84162 12.5416C10.275 12.8582 10.7166 13.1082 11.1583 13.2999C11.7916 13.5749 12.3749 13.6416 12.8499 13.4416C13.0166 13.3749 13.1666 13.2583 13.3166 13.1083C13.3916 13.0249 13.45 12.9416 13.5 12.8332C13.525 12.7749 13.5416 12.7082 13.5416 12.6499C13.5416 12.6332 13.5416 12.6083 13.5166 12.5583L12.1249 11.5916C12.0666 11.5499 12.0083 11.5166 11.9583 11.4999C11.9249 11.5166 11.875 11.5416 11.7833 11.6332L11.4666 11.9499C11.225 12.1916 10.8416 12.2582 10.5333 12.1499L10.3833 12.0832C10.1916 11.9832 9.97495 11.8333 9.73329 11.6249C9.49995 11.4249 9.27498 11.2166 9.03331 10.9832C8.79998 10.7416 8.59163 10.5166 8.39163 10.2832C8.17497 10.0249 8.02497 9.81659 7.92497 9.64159L7.83331 9.42491C7.80831 9.34158 7.79995 9.24991 7.79995 9.16658C7.79995 8.93325 7.88331 8.7249 8.04165 8.55824L8.35832 8.23325C8.44998 8.14158 8.4833 8.09159 8.49997 8.05826C8.47497 7.99992 8.44164 7.94991 8.39997 7.89158L7.42494 6.51659L7.32494 6.4499Z"
+          fill="#33D752"
+        />
+      </symbol>
+      <symbol
+        id="facebook"
+        viewBox="0 0 24 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        stroke="currentColor"
+      >
+        <path
+          d="M14.75 22.7501H10.25V15.5001H9.29999C8.71999 15.5001 8.25 15.0301 8.25 14.4501V12.5501C8.25 11.9701 8.71999 11.5001 9.29999 11.5001H10.25V9.00012C10.25 6.93012 11.93 5.25012 14 5.25012H16.7C17.28 5.25012 17.75 5.72011 17.75 6.30011V8.70013C17.75 9.28013 17.28 9.75012 16.7 9.75012H14.75V11.5001H16.63C16.95 11.5001 17.24 11.6401 17.44 11.8801C17.64 12.1201 17.72 12.4401 17.66 12.7501L17.28 14.6501C17.18 15.1401 16.75 15.4901 16.25 15.4901H14.75V22.7501ZM11.75 21.2501H13.25V14.0001H15.89L16.09 13.0001H13.26V9.30011C13.26 8.72011 13.73 8.25012 14.31 8.25012H16.26V6.75012H14C12.76 6.75012 11.75 7.76012 11.75 9.00012V13.0001H9.75V14.0001H11.75V21.2501Z"
+          fill="#FCFDFF"
+        />
+        <path
+          d="M15 22.7501H9C3.57 22.7501 1.25 20.4301 1.25 15.0001V9.00012C1.25 3.57012 3.57 1.25012 9 1.25012H15C20.43 1.25012 22.75 3.57012 22.75 9.00012V15.0001C22.75 20.4301 20.43 22.7501 15 22.7501ZM9 2.75012C4.39 2.75012 2.75 4.39012 2.75 9.00012V15.0001C2.75 19.6101 4.39 21.2501 9 21.2501H15C19.61 21.2501 21.25 19.6101 21.25 15.0001V9.00012C21.25 4.39012 19.61 2.75012 15 2.75012H9Z"
+          fill="#FCFDFF"
+        />
+      </symbol>
+      <symbol
+        id="send-2"
+        viewBox="0 0 24 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        stroke="currentColor"
+      >
+        <path
+          d="M14.22 21.6301C13.04 21.6301 11.37 20.8001 10.05 16.8301L9.33 14.6701L7.17 13.9501C3.21 12.6301 2.38 10.9601 2.38 9.78007C2.38 8.61007 3.21 6.93007 7.17 5.60007L15.66 2.77007C17.78 2.06007 19.55 2.27007 20.64 3.35007C21.73 4.43007 21.94 6.21007 21.23 8.33007L18.4 16.8201C17.07 20.8001 15.4 21.6301 14.22 21.6301ZM7.64 7.03007C4.86 7.96007 3.87 9.06007 3.87 9.78007C3.87 10.5001 4.86 11.6001 7.64 12.5201L10.16 13.3601C10.38 13.4301 10.56 13.6101 10.63 13.8301L11.47 16.3501C12.39 19.1301 13.5 20.1201 14.22 20.1201C14.94 20.1201 16.04 19.1301 16.97 16.3501L19.8 7.86007C20.31 6.32007 20.22 5.06007 19.57 4.41007C18.92 3.76007 17.66 3.68007 16.13 4.19007L7.64 7.03007Z"
+          fill="#FCFDFF"
+        />
+        <path
+          d="M10.11 14.4001C9.91999 14.4001 9.72999 14.3301 9.57999 14.1801C9.28999 13.8901 9.28999 13.4101 9.57999 13.1201L13.16 9.53012C13.45 9.24012 13.93 9.24012 14.22 9.53012C14.51 9.82012 14.51 10.3001 14.22 10.5901L10.64 14.1801C10.5 14.3301 10.3 14.4001 10.11 14.4001Z"
+          fill="#FCFDFF"
+        />
+      </symbol>
+      <symbol
+        id="move-right"
+        viewBox="0 0 24 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M21.2501 11.9999C21.2501 12.1899 21.1801 12.3799 21.0301 12.5299L14.9601 18.5999C14.6701 18.8899 14.1901 18.8899 13.9001 18.5999C13.6101 18.3099 13.6101 17.8299 13.9001 17.5399L19.4401 11.9999L13.9001 6.45988C13.6101 6.16988 13.6101 5.68988 13.9001 5.39988C14.1901 5.10988 14.6701 5.10988 14.9601 5.39988L21.0301 11.4699C21.1801 11.6199 21.2501 11.8099 21.2501 11.9999Z"
+          fill="#41465C"
+        />
+        <path
+          d="M21.08 12C21.08 12.41 20.74 12.75 20.33 12.75L3.5 12.75C3.09 12.75 2.75 12.41 2.75 12C2.75 11.59 3.09 11.25 3.5 11.25L20.33 11.25C20.74 11.25 21.08 11.59 21.08 12Z"
+          fill="#41465C"
+        />
+      </symbol>
+    </svg>
+
     <section class="mx-auto max-w-1440 px-4 lg:px-[78px]">
       <!-- adress -->
       <div
@@ -30,7 +95,11 @@
           eaque beatae, officia labore perferendis!
         </h2>
         <div class="mt-4 lg:mx-[217px] lg:mt-8">
-          <img src="../public/imege/Frame 1000006923.png" alt="" />
+          <img
+            class="rounded-lg"
+            src="../public/imege/Frame 1000006923.png"
+            alt=""
+          />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta sit
             harum eius pariatur officia cumque illum non. Eius magni in ipsam
@@ -96,7 +165,198 @@
           </p>
         </div>
         <!-- share this page -->
-         
+        <div class="mt-8 flex items-center justify-center gap-x-6 lg:gap-x-2">
+          <p
+            class="text-sm font-bold text-blackColor lg:text-[19px] lg:font-medium lg:leading-8"
+          >
+            share this page :
+          </p>
+          <div class="flex items-center gap-x-4">
+            <svg class="text-telegram size-5 lg:size-7">
+              <use href="#send-2"></use>
+            </svg>
+            <div class="size-5 lg:size-7">
+              <img
+                class="size-full"
+                src="../public/imege/instagram.png"
+                alt="logo"
+              />
+            </div>
+            <svg class="text-facebook size-5 lg:size-7">
+              <use href="#facebook"></use>
+            </svg>
+            <svg class="size-5 lg:size-7">
+              <use href="#whatsapp"></use>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <!-- footer  -->
+      <div class="mt-16 flex items-center justify-between">
+        <p
+          class="border-l-2 border-solid border-customblue pl-1 font-bold text-blackColor2 lg:border-l-4 lg:pl-2 lg:text-[33px] lg:font-medium lg:leading-[56px]"
+        >
+          Related Article
+        </p>
+        <div class="flex items-center gap-x-1">
+          <p class="text-sm leading-6 text-blackColor">more news</p>
+          <svg class="size-5">
+            <use href="#move-right"></use>
+          </svg>
+        </div>
+      </div>
+      <div
+        class="flex  mt-6 lg:grid grid-cols-4 gap-x-4 child:rounded child:bg-bgWColor child:p-3 lg:mt-8 lg:gap-x-6 child:lg:rounded-lg child:lg:p-4 child:min-w-[212px]"
+      >
+        <!-- content footer -->
+        <div
+          class="mb-10"
+          style="
+            box-shadow: 0px 1px 3px 1px #00000014;
+
+            box-shadow: 0px 1px 2px 0px #00000014;
+          "
+        >
+          <div class="h-24 rounded lg:h-[140px] lg:rounded-lg">
+            <img
+              class="size-full"
+              src="../public/imege/Frame 48096552.png"
+              alt="logo"
+            />
+          </div>
+          <p
+            class="mt-2 text-[10px] font-medium leading-4 text-borderColorT lg:mb-1 lg:mt-4 lg:text-sm lg:leading-6"
+          >
+            business news
+          </p>
+          <h5
+            class="mb-1 text-sm font-bold leading-5 text-blackColor lg:mb-2 lg:text-[19px] lg:font-medium lg:leading-8"
+          >
+            title of the articles
+          </h5>
+          <p
+            class="mb-2 line-clamp-3 text-xs leading-5 text-searchColor lg:mb-4 lg:line-clamp-2 lg:text-sm lg:leading-6"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor
+          </p>
+          <button
+            class="flex h-8 w-full items-center justify-center rounded bg-customblue text-sm text-customWhite lg:h-10"
+          >
+            see details
+          </button>
+        </div>
+        <div
+          class="mb-10"
+          style="
+            box-shadow: 0px 1px 3px 1px #00000014;
+
+            box-shadow: 0px 1px 2px 0px #00000014;
+          "
+        >
+          <div class="h-24 rounded lg:h-[140px] lg:rounded-lg">
+            <img
+              class="size-full"
+              src="../public/imege/Frame 48096552.png"
+              alt="logo"
+            />
+          </div>
+          <p
+            class="mt-2 text-[10px] font-medium leading-4 text-borderColorT lg:mb-1 lg:mt-4 lg:text-sm lg:leading-6"
+          >
+            business news
+          </p>
+          <h5
+            class="mb-1 text-sm font-bold leading-5 text-blackColor lg:mb-2 lg:text-[19px] lg:font-medium lg:leading-8"
+          >
+            title of the articles
+          </h5>
+          <p
+            class="mb-2 line-clamp-3 text-xs leading-5 text-searchColor lg:mb-4 lg:line-clamp-2 lg:text-sm lg:leading-6"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor
+          </p>
+          <button
+            class="flex h-8 w-full items-center justify-center rounded bg-customblue text-sm text-customWhite lg:h-10"
+          >
+            see details
+          </button>
+        </div>
+        <div
+          class="mb-10"
+          style="
+            box-shadow: 0px 1px 3px 1px #00000014;
+
+            box-shadow: 0px 1px 2px 0px #00000014;
+          "
+        >
+          <div class="h-24 rounded lg:h-[140px] lg:rounded-lg">
+            <img
+              class="size-full"
+              src="../public/imege/Frame 48096552.png"
+              alt="logo"
+            />
+          </div>
+          <p
+            class="mt-2 text-[10px] font-medium leading-4 text-borderColorT lg:mb-1 lg:mt-4 lg:text-sm lg:leading-6"
+          >
+            business news
+          </p>
+          <h5
+            class="mb-1 text-sm font-bold leading-5 text-blackColor lg:mb-2 lg:text-[19px] lg:font-medium lg:leading-8"
+          >
+            title of the articles
+          </h5>
+          <p
+            class="mb-2 line-clamp-3 text-xs leading-5 text-searchColor lg:mb-4 lg:line-clamp-2 lg:text-sm lg:leading-6"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor
+          </p>
+          <button
+            class="flex h-8 w-full items-center justify-center rounded bg-customblue text-sm text-customWhite lg:h-10"
+          >
+            see details
+          </button>
+        </div>
+        <div
+        class="mb-10"
+        style="
+          box-shadow: 0px 1px 3px 1px #00000014;
+
+          box-shadow: 0px 1px 2px 0px #00000014;
+        "
+      >
+        <div class="h-24 rounded lg:h-[140px] lg:rounded-lg">
+          <img
+            class="size-full"
+            src="../public/imege/Frame 48096552.png"
+            alt="logo"
+          />
+        </div>
+        <p
+          class="mt-2 text-[10px] font-medium leading-4 text-borderColorT lg:mb-1 lg:mt-4 lg:text-sm lg:leading-6"
+        >
+          business news
+        </p>
+        <h5
+          class="mb-1 text-sm font-bold leading-5 text-blackColor lg:mb-2 lg:text-[19px] lg:font-medium lg:leading-8"
+        >
+          title of the articles
+        </h5>
+        <p
+          class="mb-2 line-clamp-3 text-xs leading-5 text-searchColor lg:mb-4 lg:line-clamp-2 lg:text-sm lg:leading-6"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor
+        </p>
+        <button
+          class="flex h-8 w-full items-center justify-center rounded bg-customblue text-sm text-customWhite lg:h-10"
+        >
+          see details
+        </button>
+      </div>
       </div>
     </section>
   </body>
