--- a/src/style/output.css
+++ b/src/style/output.css
@@ -646,6 +646,10 @@ video {
   left: 0px;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .left-full {
   left: 100%;
 }
@@ -656,10 +660,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.left-4 {
-  left: 1rem;
 }
 
 .-z-10 {
@@ -714,6 +714,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -730,8 +734,28 @@ video {
   margin-top: 38px;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .line-clamp-2 {
@@ -739,6 +763,13 @@ video {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+}
+
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 .block {
@@ -834,6 +865,18 @@ video {
   height: 1px;
 }
 
+.h-\[140\] {
+  height: 140;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
 .w-15 {
   width: 60px;
 }
@@ -876,6 +919,14 @@ video {
 
 .w-px {
   width: 1px;
+}
+
+.w-\[2710\] {
+  width: 2710;
+}
+
+.w-\[271px\] {
+  width: 271px;
 }
 
 .max-w-1440 {
@@ -924,6 +975,10 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -962,6 +1017,11 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-x-0\.5 {
+  -moz-column-gap: 0.125rem;
+       column-gap: 0.125rem;
 }
 
 .gap-x-1 {
@@ -1011,11 +1071,6 @@ video {
   row-gap: 2rem;
 }
 
-.gap-x-0\.5 {
-  -moz-column-gap: 0.125rem;
-       column-gap: 0.125rem;
-}
-
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1044,12 +1099,24 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-l-2 {
+  border-left-width: 2px;
 }
 
 .border-solid {
@@ -1059,6 +1126,11 @@ video {
 .border-borderColorB {
   --tw-border-opacity: 1;
   border-color: rgb(181 185 200 / var(--tw-border-opacity));
+}
+
+.border-customblue {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 23 112 / var(--tw-border-opacity));
 }
 
 .border-searchColor {
@@ -1095,6 +1167,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-customblue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 23 112 / var(--tw-bg-opacity));
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1125,21 +1202,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
-.px-\[217\] {
-  padding-left: 217;
-  padding-right: 217;
-}
-
-.px-\[217px\] {
-  padding-left: 217px;
-  padding-right: 217px;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1152,12 +1214,20 @@ video {
   padding-top: 2rem;
 }
 
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .font-roboto {
   font-family: roboto;
 }
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
 }
 
 .text-\[8px\] {
@@ -1167,6 +1237,11 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1179,13 +1254,17 @@ video {
   line-height: 1rem;
 }
 
-.text-\[11px\] {
-  font-size: 11px;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[33px\] {
+  font-size: 33px;
+}
+
+.text-\[19px\] {
+  font-size: 19px;
 }
 
 .font-bold {
@@ -1198,6 +1277,22 @@ video {
 
 .leading-4 {
   line-height: 1rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-9 {
+  line-height: 2.25rem;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .text-blackColor {
@@ -1225,9 +1320,19 @@ video {
   color: rgb(0 23 112 / var(--tw-text-opacity));
 }
 
+.text-facebook {
+  --tw-text-opacity: 1;
+  color: rgb(9 102 255 / var(--tw-text-opacity));
+}
+
 .text-searchColor {
   --tw-text-opacity: 1;
   color: rgb(65 70 92 / var(--tw-text-opacity));
+}
+
+.text-telegram {
+  --tw-text-opacity: 1;
+  color: rgb(46 161 218 / var(--tw-text-opacity));
 }
 
 .text-textblue {
@@ -1235,8 +1340,16 @@ video {
   color: rgb(9 41 167 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-\[33\] {
+  color: 33;
+}
+
+.text-\[19\] {
+  color: 19;
+}
+
+.text-\[10\] {
+  color: 10;
 }
 
 .opacity-0 {
@@ -1317,12 +1430,24 @@ video {
   display: flex;
 }
 
+.child\:min-w-\[\] > * {
+  min-width: ;
+}
+
+.child\:min-w-\[212px\] > * {
+  min-width: 212px;
+}
+
 .child\:justify-between > * {
   justify-content: space-between;
 }
 
 .child\:rounded-lg > * {
   border-radius: 0.5rem;
+}
+
+.child\:rounded > * {
+  border-radius: 0.25rem;
 }
 
 .child\:border-b-4 > * {
@@ -1343,8 +1468,17 @@ video {
   background-color: rgb(246 247 248 / var(--tw-bg-opacity));
 }
 
+.child\:bg-white > * {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .child\:p-3 > * {
   padding: 0.75rem;
+}
+
+.child\:p-4 > * {
+  padding: 1rem;
 }
 
 .child\:px-2 > * {
@@ -1373,14 +1507,14 @@ video {
     margin-right: 0.5rem;
   }
 
-  .lg\:my-\[11px\] {
-    margin-top: 11px;
-    margin-bottom: 11px;
-  }
-
   .lg\:mx-\[217px\] {
     margin-left: 217px;
     margin-right: 217px;
+  }
+
+  .lg\:my-\[11px\] {
+    margin-top: 11px;
+    margin-bottom: 11px;
   }
 
   .lg\:mb-0 {
@@ -1393,6 +1527,10 @@ video {
 
   .lg\:mr-2 {
     margin-right: 0.5rem;
+  }
+
+  .lg\:mr-\[218px\] {
+    margin-right: 218px;
   }
 
   .lg\:mt-0 {
@@ -1419,16 +1557,40 @@ video {
     margin-top: 2rem;
   }
 
-  .lg\:mr-\[218px\] {
-    margin-right: 218px;
+  .lg\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .lg\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .lg\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 
   .lg\:flex {
     display: flex;
   }
 
+  .lg\:grid {
+    display: grid;
+  }
+
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:size-7 {
+    width: 1.75rem;
+    height: 1.75rem;
   }
 
   .lg\:h-14 {
@@ -1449,6 +1611,14 @@ video {
 
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:h-\[140px\] {
+    height: 140px;
+  }
+
+  .lg\:h-10 {
+    height: 2.5rem;
   }
 
   .lg\:w-12 {
@@ -1479,6 +1649,16 @@ video {
     align-items: center;
   }
 
+  .lg\:gap-x-1 {
+    -moz-column-gap: 0.25rem;
+         column-gap: 0.25rem;
+  }
+
+  .lg\:gap-x-2 {
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
+  }
+
   .lg\:gap-x-6 {
     -moz-column-gap: 1.5rem;
          column-gap: 1.5rem;
@@ -1494,13 +1674,16 @@ video {
          column-gap: 2rem;
   }
 
-  .lg\:gap-x-1 {
-    -moz-column-gap: 0.25rem;
-         column-gap: 0.25rem;
-  }
-
   .lg\:rounded {
     border-radius: 0.25rem;
+  }
+
+  .lg\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .lg\:border-l-4 {
+    border-left-width: 4px;
   }
 
   .lg\:px-4 {
@@ -1511,11 +1694,6 @@ video {
   .lg\:px-\[78px\] {
     padding-left: 78px;
     padding-right: 78px;
-  }
-
-  .lg\:px-\[217px\] {
-    padding-left: 217px;
-    padding-right: 217px;
   }
 
   .lg\:pb-4 {
@@ -1538,12 +1716,25 @@ video {
     padding-top: 1.25rem;
   }
 
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
+  }
+
   .lg\:text-\[10px\] {
     font-size: 10px;
   }
 
   .lg\:text-\[19px\] {
     font-size: 19px;
+  }
+
+  .lg\:text-\[40px\] {
+    font-size: 40px;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .lg\:text-sm {
@@ -1556,13 +1747,8 @@ video {
     line-height: 1rem;
   }
 
-  .lg\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .lg\:text-\[40px\] {
-    font-size: 40px;
+  .lg\:text-\[33px\] {
+    font-size: 33px;
   }
 
   .lg\:font-medium {
@@ -1573,28 +1759,32 @@ video {
     line-height: 1.5rem;
   }
 
-  .lg\:leading-10 {
-    line-height: 2.5rem;
-  }
-
-  .lg\:leading-\[\] {
-    line-height: ;
-  }
-
-  .lg\:leading-\[64\] {
-    line-height: 64;
+  .lg\:leading-8 {
+    line-height: 2rem;
   }
 
   .lg\:leading-\[64px\] {
     line-height: 64px;
   }
 
-  .lg\:text-\[\] {
-    color: ;
+  .lg\:leading-9 {
+    line-height: 2.25rem;
   }
 
-  .lg\:text-\[40\] {
-    color: 40;
+  .lg\:leading-10 {
+    line-height: 2.5rem;
+  }
+
+  .lg\:leading-\[56px\] {
+    line-height: 56px;
+  }
+
+  .child\:lg\:rounded-lg > * {
+    border-radius: 0.5rem;
+  }
+
+  .child\:lg\:p-4 > * {
+    padding: 1rem;
   }
 
   .child\:lg\:pt-5 > * {
